# yandex-handbook-python

./: LICENSE  README.md  README_builder.py  pyproject.toml
2. Базовые конструкции Python/: README.md
2. Базовые конструкции Python/2.1. Ввод и вывод данных. Операции с числами, строками. Форматирование/: C. Излишняя автоматизация.py  F. Чек.py  H. Наказание.py  I. Деловая колбаса.py  K. Автоматизация игры.py  M. Дед Мороз и конфеты.py  O. В ожидании доставки.py  Q. Ошибка кассового аппарата.py  README.md  T. Мухи отдельно, котлеты отдельно.py
2. Базовые конструкции Python/2.2. Условный оператор/: A. Просто здравствуй, просто как дела.py  E. Яблоки.py  F. Сила прокрастинации.py  H. Зайка — 1.py  J. Лучшая защита — шифрование.py  K. Красота спасёт мир.py  L. Музыкальный инструмент.py  M. Властелин Чисел. Братство общей цифры.py  O. Властелин Чисел. Возвращение Цезаря.py  P. Легенды велогонок возвращаются. кто быстрее.py  R. Территория зла.py  README.md
2. Базовые конструкции Python/2.3. Циклы/: C. Считалочка.py  F. НОД.py  G. НОК.py  I. Факториал.py  M. Первому игроку приготовиться 2.0.py  O. Зайка - 4.py  R. Простая задача 2.0.py  README.md  S. Игра в «Угадайку».py
2. Базовые конструкции Python/2.4. Вложенные циклы/: A. Таблица умножения.py  B. Не таблица умножения.py  D. Суммарная сумма.py  F. НОД 2.0.py  G. На старт! Внимание! Марш!.py  README.md  (+7 more)
3. Коллекции и работа с памятью/: README.md
4. Функции и их особенности в Python/: README.md
5. Объектно-ориентированное программирование/: README.md
6. Библиотеки для получения и обработки данных/: README.md
(+635 files in other folders)
